2011-01-20  Richard Guenther  <rguenther@suse.de>

PR middle-end/47370
	* tree-inline.c (remap_gimple_op_r): Recurse manually for
	the pointer operand of MEM_REFs.

	* gcc.dg/torture/pr47370.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@169055 138bc75d-0d04-0410-961f-82ee72b054a4